fix: course component wrapping

--- a/src/app/modules/layout/home/dashboard/course-card/course-card.component.scss
+++ b/src/app/modules/layout/home/dashboard/course-card/course-card.component.scss
@@ -1,9 +1,3 @@
-.right {
-  display: flex;
-  justify-content: right;
-  gap: 1rem;
-}
-
 .pointer {
   cursor: pointer;
 }
